--- a/app/src/App.css
+++ b/app/src/App.css
@@ -1,4 +1,268 @@
 .App {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100vw;
   height: 100vh;
+  color: #1d1e1f;
+  background-color: #fff;
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, Segoe UI, system-ui,
+    Oxygen, Ubuntu, Cantarell, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+.MainContainer {
+  width: 50%;
+}
+
+html {
+  line-height: 1.15;
+  -webkit-text-size-adjust: 100%;
+}
+body {
+  margin: 0;
+}
+main {
+  display: block;
+}
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+hr {
+  -webkit-box-sizing: content-box;
+  box-sizing: content-box;
+  height: 0;
+  overflow: visible;
+}
+pre {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+a {
+  background-color: transparent;
+}
+abbr[title] {
+  border-bottom: none;
+  text-decoration: underline;
+  -webkit-text-decoration: underline dotted;
+  text-decoration: underline dotted;
+}
+b,
+strong {
+  font-weight: bolder;
+}
+code,
+kbd,
+samp {
+  font-family: monospace, monospace;
+  font-size: 1em;
+}
+small {
+  font-size: 80%;
+}
+sub,
+sup {
+  font-size: 75%;
+  line-height: 0;
+  position: relative;
+  vertical-align: baseline;
+}
+sub {
+  bottom: -0.25em;
+}
+sup {
+  top: -0.5em;
+}
+img {
+  border-style: none;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  font-family: inherit;
+  font-size: 100%;
+  line-height: 1.15;
+  margin: 0;
+}
+button,
+input {
+  overflow: visible;
+}
+button,
+select {
+  text-transform: none;
+}
+[type="button"],
+[type="reset"],
+[type="submit"],
+button {
+  -webkit-appearance: button;
+}
+[type="button"]::-moz-focus-inner,
+[type="reset"]::-moz-focus-inner,
+[type="submit"]::-moz-focus-inner,
+button::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+[type="button"]:-moz-focusring,
+[type="reset"]:-moz-focusring,
+[type="submit"]:-moz-focusring,
+button:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+fieldset {
+  padding: 0.35em 0.75em 0.625em;
+}
+legend {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  color: inherit;
+  display: table;
+  max-width: 100%;
+  padding: 0;
+  white-space: normal;
+}
+progress {
+  vertical-align: baseline;
+}
+textarea {
+  overflow: auto;
+}
+[type="checkbox"],
+[type="radio"] {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+}
+[type="number"]::-webkit-inner-spin-button,
+[type="number"]::-webkit-outer-spin-button {
+  height: auto;
+}
+[type="search"] {
+  -webkit-appearance: textfield;
+  outline-offset: -2px;
+}
+[type="search"]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  font: inherit;
+}
+details {
+  display: block;
+}
+summary {
+  display: list-item;
+}
+[hidden],
+template {
+  display: none;
+}
+body {
+  font-family: -apple-system, BlinkMacSystemFont, Roboto, Segoe UI, system-ui,
+    Helvetica Neue, Ubuntu, sans-serif;
+  background: #fff;
+  color: #1d1e1f;
+}
+b,
+strong {
+  font-weight: 500;
+}
+a,
+a:active,
+a:link,
+a:visited {
+  cursor: pointer;
+  color: #4471b7;
+  font-weight: 500;
+}
+button,
+input,
+optgroup,
+select,
+textarea {
+  color: inherit;
+}
+[role="button"],
+button {
+  cursor: auto;
+}
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #727374;
+  opacity: 1;
+}
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #727374;
+  opacity: 1;
+}
+input::-ms-input-placeholder,
+textarea::-ms-input-placeholder {
+  color: #727374;
+  opacity: 1;
+}
+input::placeholder,
+textarea::placeholder {
+  color: #727374;
+  opacity: 1;
+}
+@media (-ms-high-contrast: active) {
+  mark {
+    color: inherit;
+  }
+}
+
+element.style {
+}
+.Homepage .ContainerGrid-header .ContainerGrid-header-title {
+    font-size: 2rem;
+    font-weight: 400;
+    text-align: center;
+    display: block;
+}
+@media (min-width: 48rem)
+.ContainerGrid-header .ContainerGrid-header-title {
+    font-size: 2rem;
+}
+.ContainerGrid-header .ContainerGrid-header-title {
+    font-size: 1.5rem;
+}
+@media (min-width: 1024px)
+.ContainerGrid-header-title {
+    font-size: 30px;
+}
+.ContainerGrid-header-title {
+    font-weight: 400;
+    margin: 0;
+    font-size: 24px;
+    line-height: 1;
+    display: inline-block;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: Nunito,-apple-system,BlinkMacSystemFont,Roboto,Segoe UI,system-ui,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue,sans-serif;
+}
+*,
+:after,
+:before {
+  border: 0 solid;
+}
+[class^="kds-"],
+[class^="kds-"]:after,
+[class^="kds-"]:before {
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  word-wrap: break-word;
+}
+[class^="kds-"] *,
+[class^="kds-"] :after,
+[class^="kds-"] :before {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+  word-wrap: inherit;
 }
