--- a/app/src/components/button/button.css
+++ b/app/src/components/button/button.css
@@ -6,6 +6,30 @@
 }
 
 .Button button {
+  vertical-align: middle;
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  height: 2.5rem;
+  min-width: 4rem;
+  padding: 0 1rem;
+  border: 1px solid;
+  border-radius: 625rem;
+  font-size: .844rem;
+  font-weight: 500;
+  transition-duration: .05s;
+  box-sizing: border-box;
+  transition-property: transform;
+  transition-timing-function: ease-in-out;
+  color: #fff;
+  background-color: #4471b7;
+  border-color: #4471b7;
+  height: 2rem;
+  border-radius: 625rem;
+}
+
+/* .Button button {
   position: relative;
   overflow: hidden;
   width: 274px;
@@ -27,20 +51,26 @@
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   cursor: pointer;
-}
+} */
 
 .Button button {
   background-position: center;
   -webkit-transition: background 0.8s;
   transition: background 0.8s;
 }
+
 .Button button:hover {
-  background: #753e45 radial-gradient(circle, transparent 1%, #753e45 1%)
-    center/15000%;
+  background: #385397 radial-gradient(circle, transparent 1%, #385397 1%) center/15000%;
 }
+
 .Button button:active {
-  background-color: #a37e83;
+  background-color: #385397;
   background-size: 100%;
   -webkit-transition: background 0s;
   transition: background 0s;
+}
+
+.Button button:focus {
+  outline-color: #4471b7;
+  outline-color: -webkit-focus-ring-color;
 }
