--- a/app/src/components/text-area/text-area.css
+++ b/app/src/components/text-area/text-area.css
@@ -12,7 +12,7 @@
 }
 
 .TextArea textarea {
-  background: #ccab98;
+  background: #c3e2f9;
   box-shadow: inset 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-color: transparent;
   border-width: 0px;
