--- a/app/src/views/my-groups/my-groups.css
+++ b/app/src/views/my-groups/my-groups.css
@@ -3,7 +3,7 @@
   align-items: center;
   justify-content: flex-start;
   flex-direction: column;
-  background-color: #e8dfd8;
+  background-color: transparent;
   height: 100%;
   overflow-y: auto;
   width: 90%;
