--- a/app/src/components/input/input.css
+++ b/app/src/components/input/input.css
@@ -18,7 +18,6 @@
     display: block;
     font-size: 1rem;
     height: 2.5rem;
-    max-width: 24.25rem;
-    padding: 0 1rem;
-    width: 80%;
+    padding: 0;
+    width: 100%;
 }
